# softgpu

./: .gitignore  CMakeLists.txt
src/: draw.cpp  draw.h  geometry.cpp  geometry.h  image.cpp  image.h  main.cpp  model.cpp  model.h
